# Doggy_monitor

./: .gitlab-ci.yml  README.md  results.txt
app/: README.md
app/DogMonitor/: settings.gradle.kts
app/DogMonitor/app/: build.gradle.kts
app/DogMonitor/app/src/main/: AndroidManifest.xml
app/DogMonitor/app/src/main/res/color/: bottom_nav_item_color.xml
app/DogMonitor/app/src/main/res/drawable/: ic_monitoring_black_24dp.xml  (+2 more)
app/DogMonitor/gradle/: libs.versions.toml
app/DogMonitor/gradle/wrapper/: gradle-wrapper.properties
camera/: README.md
camera/src/: local_track.py  servo_controller.py  start_tracker.py  webapp.py
camera/src/inne/: camera_stream.py  rtmp_stream.py  sender.py  tracker.py
docs/: README.md  mkdocs.yml
docs/assets/: README.md  adapter3d.stl
docs/camera/: README.md  dog_detector
docs/cloud/: README.md
docs/docs/: index.md
docs/docs/camera/: arch.md  gimball.md
models/: README.md  config.yaml  requirements.txt  rysiowanie.py  test_for_one_image.py  test_model.py  train.py
models/dataset/: README.md  data_merge.py  nasz_szkieleton.txt  norm.py  revert_split.py  split_data.py  zip_unpacker.py
models/dataset/pre_label_tool/: punkty.py
psikod/: aa.jfif  main.py  process_stream.py  results.txt  server.py
server/: Dockerfile  README.md  docker-compose.yml  emocje.txt  img_reciver.py  kalman_test_folder.py  kalman_test_video.py  odb_emocji.py  odebrany.txt  process_stream.py  pyproject.toml  rec2.py  requirements.txt  server_main.py  sym_klienta.py
server/inne/: Dockerfile  docker-compose.yml  img_reciver.py  odb_emocji.py
(+22 files in other folders)
